Testing Heroku Update

--- a/requirements.txt
+++ b/requirements.txt
@@ -110,7 +110,7 @@ testpath==0.5.0
 toml==0.10.2
 tornado==6.1
 traitlets==5.1.0
-urllib3
+urllib3==1.25.11
 virtualenv==16.7.7
 virtualenvwrapper-win==1.2.6
 wcwidth==0.2.5
