--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ pep517==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.1.1
+pipenv==2021.11.23
 progress==1.5
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
@@ -112,6 +113,7 @@ tornado==6.1
 traitlets==5.1.0
 urllib3==1.25.11
 virtualenv==16.7.7
+virtualenv-clone==0.5.7
 virtualenvwrapper-win==1.2.6
 wcwidth==0.2.5
 webencodings==0.5.1
